--- a/my_profile.html
+++ b/my_profile.html
@@ -4,22 +4,56 @@
   <title>Good Movies</title>
  </head>
  <body>
- <a href=#index.html>
+ 
+   <a href="index.html">
+ Goodmovies
  </a>
-  <img src="/images/pexels.jpg>
-  <h1>IMIĘ NAZWISKO</h1>
-  <p>Konto aktywne od 09.12.2021</p>
-  <ul>
-  <li>Recenzje</li>
-  <li>Polecone</li>
-  <li>Ocenione</li>
-  <li>Ulubione</li>
+ 
+   <form>
+ <input type="text" placeholder="Star Wars">
+ <button type="search">Szukaj</button>
+ </form>
+ 
+   <a href="index.html">
+ Mój profil
+ </a>
+ 
+   <a href="index.html">
+ Zaloguj
+ </a>
+ 
+   <h1>IMIĘ NAZWISKO</h1>
+ 
+   <img src="https://images.indianexpress.com/2020/04/feel-good-films-1200.jpg"
+   width="450" height="360">
+
+   <p>Konto aktywne od 09.12.2021</p>
+ 
+   <ul>
+   <li> 
+   <a href="index.html">
+ Recenzje
+ </a>
+ </li>
+   <li> 
+   <a href="index.html">
+ Polecone
+ </a>
+ </li>
+   <li> 
+   <a href="index.html">
+ Ocenione
+ </a>
+ </li>
+   <li> 
+   <a href="index.html">
+ Ulubione
+ </a>
+ </li>
+  
+  <footer>
+  <p>All rights reserved 2021</p>
+</footer>
+
  </body>
 </html>
-
-
-
-
-wchodzimy do desktopu, w linuxie, potem git init, git status
-git add ., git commit -m" tresc komentarza "
-... girls_go_it_21 ±|main|→ git push -u origin main
