--- a/my_profile.html
+++ b/my_profile.html
@@ -1,59 +1,76 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+
  <head>
-  <title>Good Movies</title>
+ 
+      <!-- CSS -->
+      <link rel="stylesheet" href="style.css">
+  
+      <!-- METADATA -->
+	  <meta charset="UTF-8"> <!-- kodowanie -->
+      <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- dopasowanie do wielkości ekranu urządzenia -->
+	  
+      <!-- TITLE -->
+      <title>Good Movies</title>
+  
  </head>
+ 
  <body>
  
-   <a href="index.html">
- Goodmovies
- </a>
+  <!-- Navbar -->
+   <nav><!-- Nawigacja strony -->
+		
+       <a href="index.html" class="color1"> Goodmovies </a>
  
-   <form>
- <input type="text" placeholder="Star Wars">
- <button type="search">Szukaj</button>
- </form>
+     <form>
+       <input type="text" placeholder="Star Wars">
+       <button type="search" class="color4" >Szukaj</button>
+     </form>
  
-   <a href="index.html">
- Mój profil
- </a>
+     <div> <!-- divider -->
+       <a href="index.html" class="color2"> Mój profil </a>
+       <a href="index.html" class="color3"> Zaloguj </a>
+     </div>
+	 
+   </nav>
  
-   <a href="index.html">
- Zaloguj
- </a>
+ <!-- Page content -->
+  <main>
+     <section>
+        <div>
  
-   <h1>IMIĘ NAZWISKO</h1>
- 
-   <img src="https://images.indianexpress.com/2020/04/feel-good-films-1200.jpg"
-   width="450" height="360">
-
-   <p>Konto aktywne od 09.12.2021</p>
- 
-   <ul>
+       <img src="https://images.indianexpress.com/2020/04/feel-good-films-1200.jpg" width="450" height="360">
+       <h1>IMIĘ NAZWISKO</h1>
+       <div> Konto aktywne od 09.12.2021 </div>
+        </div>
+       
+	   <ul>
    <li> 
-   <a href="index.html">
+   <a href="index.html" class="color5">
  Recenzje
  </a>
  </li>
    <li> 
-   <a href="index.html">
+   <a href="index.html" class="color6">
  Polecone
  </a>
  </li>
    <li> 
-   <a href="index.html">
+   <a href="index.html" class="color7">
  Ocenione
  </a>
  </li>
    <li> 
-   <a href="index.html">
+   <a href="index.html" class="color8">
  Ulubione
  </a>
  </li>
+       </section>
+  </main>
   
   <footer>
-  <p>All rights reserved 2021</p>
-</footer>
+    <div> All rights reserved © 2021</div>
+  </footer>
 
  </body>
 </html>
