--- a/my_profile.html
+++ b/my_profile.html
@@ -2,10 +2,12 @@
 <html lang="en">
 
  <head>
- 
-      <!-- CSS -->
+      <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css">
+      
+     
+	 <!-- CSS -->
       <link rel="stylesheet" href="style.css">
-  
+
       <!-- METADATA -->
 	  <meta charset="UTF-8"> <!-- kodowanie -->
       <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- dopasowanie do wielkości ekranu urządzenia -->
@@ -16,7 +18,7 @@
  </head>
  
  <body>
- 
+
   <!-- Navbar -->
    <nav><!-- Nawigacja strony -->
 		
@@ -71,6 +73,7 @@
   <footer>
     <div> All rights reserved © 2021</div>
   </footer>
-
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"></script>
  </body>
 </html>
