--- a/My project/add_movie.html
+++ b/My project/add_movie.html
@@ -6,7 +6,7 @@
       
      
 	 <!-- CSS -->
-      <link rel="stylesheet" href="style - Copy.css">
+      <link rel="stylesheet" href="nowyCSS.css">
 
       <!-- METADATA -->
 	  <meta charset="UTF-8"> <!-- kodowanie -->
@@ -17,7 +17,7 @@
   
  </head>
  
- <body>
+ <body class="bg-dark">
 
   <!-- Navbar -->
   <div class="bg-dark pb-3">
@@ -48,7 +48,47 @@
  
  <!-- Page content -->
   <main>
-   
+   <section class="text-light pt-4">
+            <header> <h4 class="text-center">DODAJ FILM</h4> </header>
+            <div class="container">
+                <div class="row">
+                    <form class="col-12 col-md-10 m-auto">
+					    <div class="form-group">
+        <label for="movie-title">*Tytuł filmu</label>
+        <input type="text" class="form-control rounded-50" id="movie-title">
+    </div>
+    <div class="form-group">
+        <label for="movie-type">*Gatunek</label>
+        <input type="text" class="form-control rounded-50" id="movie-type">
+    </div>
+    <div class="form-group">
+        <label for="movie-characters">*Główni aktorzy</label>
+        <input type="text" class="form-control rounded-50" id="movie-characters">
+    </div>
+    <div class="form-group">
+        <label for="movie-description">Opis filmu</label>
+        <textarea class="form-control rounded-50" id="movie-description" rows="3"></textarea>
+    </div>
+    <div class="form-group custom-file">
+        <label class="custom-file-label" for="movie-poster">*Wybierz plakat...</label>
+        <input type="file" class="custom-file-input" id="movie-poster" name="movie-poster">
+    </div>
+    <div class="form-group">
+        <label for="movie-tags">Tagi</label>
+        <input type="text" class="form-control rounded-50" id="movie-tags">
+    </div>
+    <div class="form-group form-check mt-3">
+        <input class="form-check-input" type="checkbox" value="" id="movie-favourite">
+        <label class="form-check-label" for="movie-favourite">Ulubione</label>
+    </div>
+    <div class="text-right my-3">
+        <button type="submit" class="btn btn-outline-primary">Zapisz</button>
+    </div>
+
+                    </form>
+                </div>
+            </div>
+        </section>
   </main>
   
   <footer class="footer bg-primary text-light text-center">
